--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
     ],
     "routes": [
       {
+        "src": "/(.*)",
+        "dest": "/server.js" 
+      },
+      {
         "src": "/static/(.*)",
         "dest": "/static/$1"
       },
