config vercel json

--- a/vercel.json
+++ b/vercel.json
@@ -9,19 +9,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/server.js" 
-      },
-      {
-        "src": "/static/(.*)",
-        "dest": "/static/$1"
-      },
-      {
-        "src": "/uploads/(.*)",
-        "dest": "/static/uploads/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/src/$1"
+        "dest": "server.js" 
       }
     ]
   }
