--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,18 @@
       {
         "src": "/(.*)",
         "dest": "/server.js" 
+      },
+      {
+        "src": "/static/(.*)",
+        "dest": "/static/$1"
+      },
+      {
+        "src": "/uploads/(.*)",
+        "dest": "/static/uploads/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/src/$1"
       }
     ]
   }
