--- a/vercel.json
+++ b/vercel.json
@@ -15,7 +15,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "server.js"
+      "destination": "/server.js"
     },
     {
       "source": "/(.*)",
