--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "server.js",
-      "use": "@vercel/node"
+      "src": "src/**/*",
+      "use": "@vercel/static-build",
+      "config": {
+        "output": "public"
+      }
+    },
+    {
+      "src": "static/**/*", 
+      "use": "@vercel/static"
     }
   ],
   "routes": [
