--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       "dest": "/server.js"
     }
   ],
-  "rewrites": [{ "source": "/api/:path*", "destination": "srever.js" }],
+  "rewrites": [{ "source": "/api/:path*", "destination": "server.js" }],
   "headers": [
     {
       "source": "/api/:path*",
