--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,33 @@
 {
-  "version": 2,
+  "version": 3,
   "builds": [
-    { "src": "**/*.js", "use": "@now/node" }
-  ],
-  "routes": [
     {
-      "src": "/(.*)",
-      "dest": "/server.js"
+      "src": "**/*.js",
+      "use": "@now/node"
     }
   ],
-  "rewrites": [{ "source": "/api/:path*", "destination": "srever.js" }],
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/server.js"
+    }
+  ],
   "headers": [
     {
       "source": "/api/:path*",
       "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET, POST, PUT, DELETE, OPTIONS" },
-        { "key": "Access-Control-Allow-Headers", "value": "Origin, X-Requested-With, Content-Type, Accept" }
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Origin, X-Requested-With, Content-Type, Accept"
+        }
       ]
     }
   ]
